--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
   "author": "Patrick Rosales",
   "license": "MIT",
   "devDependencies": {
-    "wasm-pack": "^1.3.4",
-    "canvas": "^2.11.2"
-  },
-  "dependencies": {}
+    "canvas": "^2.11.2",
+    "wasm-pack": "^0.0.0"
+  }
 }
